fixed layout issues

--- a/components/ui/video-player.module.css
+++ b/components/ui/video-player.module.css
@@ -6,8 +6,6 @@
 .videoPlayer::-webkit-media-controls-panel {
   background-image: linear-gradient(transparent, rgba(0, 0, 0, 0.4)) !important;
   z-index: 10 !important;
-  height: 60px !important;
-  padding-bottom: 10px !important;
 }
 
 .videoPlayer::-webkit-media-controls-enclosure {
@@ -25,13 +23,10 @@
 .videoPlayer::-webkit-media-controls-mute-button,
 .videoPlayer::-webkit-media-controls-fullscreen-button {
   color: white !important;
-  transform: scale(1.2) !important;
 }
 
 .videoPlayer::-webkit-media-controls-timeline {
   border-radius: 9999px !important;
-  height: 4px !important;
-  margin: 0 15px !important;
 }
 
 .videoPlayer::-webkit-media-controls-timeline::-webkit-slider-thumb {
@@ -54,7 +49,6 @@
 
 .videoPlayer::-webkit-media-controls-volume-slider {
   border-radius: 9999px !important;
-  height: 4px !important;
 }
 
 .videoPlayer::-webkit-media-controls-volume-slider::-webkit-slider-thumb {
